# claude-code-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  MEMORY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-test.txt
.claude/: backup.sh  restore.sh  safe-ops.md  session-handoff.md
.claude-setup/: CLAUDE.md.global  GLOBAL_MEMORY.backup.md  identity.json  install.sh  merge-settings.py  projects-registry.json  settings.template.json
.claude-setup/checkpoints-backup/: 2026-03-27-self-learning-infra.md
.claude-setup/gamification/: config.json  engine.py  gamify.db.backup  growth-engine.py
.claude-setup/hooks/: auto-checkpoint.py  auto-doc.py  e2e-on-deploy.py  mcp-health-check.py  memory-decay.py  process-watchdog.py  quality-sentinel.sh  result-verifier.sh  session-summarizer.py  skill-auto-activate.py
.claude-setup/instincts/: architect-mode-triggers.yaml  checkpoint-auto.yaml  deep-research-not-surface.yaml  frustration-same-error.yaml  n8n-is-broken.yaml  night-agent-ready.yaml  no-days-estimates.yaml  parallel-not-sequential.yaml  quality-score-mandatory.yaml  study-before-act.yaml
.claude-setup/memory-backup/: flowwhisper-analysis.md
.claude-setup/observations-backup/: Dmitrij.jsonl  marketai.jsonl  (+3 more)
docs/: Claude-Code-Infrastructure-Guide.html  Claude-Code-Visual-Architecture.html  ENTERPRISE_DEV_STACK.md  HOOKS_OPTIMIZATION_REPORT.md  ORG-STRUCTURE.md  SELF-LEARNING-SETUP.md  SETUP-NEW-MACHINE.md  VSCODE_EXTENSIONS_RESEARCH.md
scripts/: setup.sh
src/: main.py
tests/: conftest.py  test_health.py
(+121 files in other folders)
